# anyapp

./: CMakeLists.txt  README.md  config.h.in
include/anyapp/: anyapp.hpp
lib/: CMakeLists.txt  anyapp.cpp
test/: CMakeLists.txt  test_anyapp.cpp
